<resources>
    <string name="app_name">Finansizmus</string>

    <!-- TODO - CLEAN STRINGS -->

    <!-- TOOLBAR MENU -->
    <string name="currency">Currency</string>
    <string name="settings">Settings</string>

    <!-- EXTRA'S KEYS -->
    <string name="EXTRA_SECTION">EXTRA_SECTION</string>
    <string name="EXTRA_DATE">EXTRA_DATE</string>
    <string name="EXTRA_ICON">EXTRA_ICON</string>
    <string name="EXTRA_LIST">EXTRA_LIST</string>
    <string name="EXTRA_NOTE">EXTRA_NOTE</string>
    <string name="EXTRA_ACCOUNT">EXTRA_ACCOUNT</string>
    <string name="EXTRA_CATEGORY">EXTRA_CATEGORY</string>
    <string name="ROW_DISPLAYABLE_TYPE">ROW_DISPLAYABLE_TYPE</string>
    <string name="EXTRA_DATE_NAME">EXTRA_DATE_NAME</string>
    <string name="EXTRA_TRANSACTION">EXTRA_TRANSACTION</string>
    <string name="EXTRA_USERNAME">EXTRA_USERNAME</string>
    <string name="EXTRA_USERMAIL">EXTRA_USERMAIL</string>

    <!-- NAVIGATION ITEMS -->
    <string name="nav_item_accounts">Accounts</string>
    <string name="nav_item_favourites">Favourites</string>
    <string name="nav_item_income">Income</string>
    <string name="nav_item_calculator">Calculator</string>
    <string name="nav_item_calendar">Calendar</string>
    <string name="nav_item_interval">Interval</string>
    <string name="nav_item_day">Day</string>
    <string name="nav_item_week">Week</string>
    <string name="nav_item_month">Month</string>
    <string name="nav_item_year">Year</string>
    <string name="nav_item_expense">Expense</string>
    <string name="email">Hi, [email address]</string>

    <!-- TRANSACTION RADIO BUTTONS -->
    <string name="income">income</string>
    <string name="expense">expense</string>

    <!-- NAV DRAWER ACTIONS -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- BUTTONS && GENERAL -->
    <string name="cancel">Cancel</string>
    <string name="login">Log-in</string>
    <string name="logout">Log-out</string>
    <string name="register">Register</string>
    <string name="add_category">Add category</string>
    <string name="submit">submit</string>
    <string name="capitalized_select_section">SELECT SECTION</string>
    <string name="capitalized_add_to">ADD TO</string>
    <string name="add">Add</string>
    <string name="total_value_btn">Total: 0.00</string>

    <!-- FRAGMENT TAGS -->
    <string name="tag_dialog_date_picker">tag_fragment_date_picker</string>
    <string name="tag_dialog_add_category">tag_dialog_add_category</string>
    <string name="tag_fragment_home">tag_fragment_home</string>
    <string name="tag_fragment_home_chart">tag_fragment_home_chart</string>
    <string name="tag_fragment_home_report">tag_fragment_home_report</string>
    <string name="tag_fragment_accounts">tag_fragment_accounts</string>
    <string name="tag_fragment_favourites">tag_fragment_favourites</string>
    <string name="tag_fragment_transaction">tag_fragment_transaction</string>


    <!-- MESSAGES -->
    <string name="transaction_success">Transaction successful!</string>
    <string name="transaction_failure">Transaction failed!</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_title">Log out!</string>
    <string name="transaction_select_account">Please select an account!</string>
    <string name="change_favourite_categories">Change favourite categories:</string>
    <string name="set_name">Set name</string>
    <string name="add_new_account">Add new account</string>
    <string name="add_new_category">Add new category</string>

    <!-- TITLES -->
    <string name="favourite_categories_title">Favourite categories:</string>
    <string name="all_categories_title">All categories:</string>
    <string name="add_more_categories_title">Add more categories:</string>
    <string name="add_category_title">Add new category</string>
    <string name="my_accounts_title">My accounts:</string>
    <string name="add_more_accounts_title">Add more accounts:</string>

    <!-- HINTS -->
    <string name="confirm_password_hint">confirm password</string>
    <string name="password_hint">password</string>
    <string name="email_hint">e-mail</string>

    <!-- TEMP -->
    <string name="transaction_input_note">add note ...</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="test_text">TEST_TEXT</string>
    <string name="note_fragment_tag">Note_input_Fragment</string>
    <string name="account_name">Account name</string>
    <string name="acount_value">0.00</string>
    <string name="or_textview">- - OR - -</string>
    <string name="filters">Filters</string>
    <string name="sortby">Sort by</string>
    <string name="start_date">Start Date</string>
    <string name="filtered_report_fragment_tag">filtered_report_tag</string>
    <string name="end_date">End Date</string>
    <string name="back">return</string>
    <string name="select_accounts">Select Accounts</string>
    <string name="to_favorite_btn">TO FAVORITE</string>
    <string name="delete_btn">DELETE</string>
    <string name="add_or_delete_category_title">Add to favorite or delete category.</string>
    <string name="sql_exception_message">An unexpected error occurred. The app will shortly restart. We are sorry for the inconvenience.</string>
    <string name="welcome_message">Welcome back</string>
    <string name="message_email_taken">Sorry, but this e-mail address is already taken. Please try another =]</string>
    <string name="hello">Welcome to Finansizums</string>
    <string name="message_invalid_login">Wrong e-mail or password</string>


    <string name="error_invalid_email">That is not a valid e-mail address!</string>
    <string name="error_password_length">Passwords must be between 5 and 40 characters!</string>


    <string name="message_double_back">Press \'back\' again to exit the app.</string>
    <string name="tag_fragment_transaction_expense">tag_fragment_transaction_expense</string>
    <string name="tag_fragment_transaction_income">tag_fragment_transaction_income</string>


</resources>
