<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bg.o.sim.finansizmus.reports.FilteredReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filtered_report_filters_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_view_spacing_small"
            android:layout_weight="1"
            android:background="@color/colorGreenLight"
            android:text="@string/select_accounts"
            android:textColor="@color/colorWhite" />

        <Spinner
            android:id="@+id/filtered_report_sort_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/all_view_spacing_small"
            android:layout_weight="1"
            android:background="@color/colorGreenLight"
            android:hint="@string/sortby"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/all_view_spacing_small"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/calendar"
                style="@style/RadioButtonIncomeExpense" />

            <TextView
                android:id="@+id/filtered_report_date_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textColor="@color/colorGreenDark" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  -  " />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/filtered_report_date_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textColor="@color/colorGreenDark" />

            <ImageView
                android:src="@drawable/calendar"
                style="@style/RadioButtonIncomeExpense" />
        </LinearLayout>
    </LinearLayout>


    <ExpandableListView
        android:id="@+id/filtered_report_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
